# jordan_rope

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: audio_lm_fma_exact_m3_transfer_long.yaml  audio_lm_maestro_exact_m3_transfer_long.yaml  audio_lm_medium_fma.yaml  audio_lm_medium_maestro.yaml  audio_lm_medium_mixed.yaml  audio_lm_medium_musicnet.yaml  audio_lm_mixed_exact_m3_transfer_long.yaml  audio_lm_musicnet_exact_m3_confirm_winners.yaml  audio_lm_musicnet_exact_m3_sweep.yaml  audio_lm_musicnet_focused_long.yaml  audio_lm_musicnet_profile_checkpoints.yaml  audio_lm_smoke_fma.yaml  audio_lm_smoke_maestro.yaml  audio_lm_smoke_mixed.yaml  audio_lm_smoke_musicnet.yaml  cpu_fallback.yaml  full_research.yaml  gpu_research.yaml  high_jet_kernel_lm_eta1.yaml  high_jet_kernel_lm_medium.yaml  high_jet_kernel_lm_smoke.yaml  high_jet_structured.yaml  high_jet_wikitext103_fullspectrum_m4_sweep.yaml  high_jet_wikitext103_fullspectrum_m5_sweep.yaml  high_jet_wikitext103_jetmix_1000.yaml  high_jet_wikitext103_jetmix_alibi_1000.yaml  high_jet_wikitext103_jetmix_alibi_confirm.yaml  high_jet_wikitext103_jetmix_alibi_sweep.yaml  high_jet_wikitext103_jetmix_confirm.yaml  high_jet_wikitext103_jetmix_sweep.yaml  high_jet_wikitext103_order2_fine.yaml  high_jet_wikitext103_param_confirm.yaml  high_jet_wikitext103_param_sweep.yaml  high_jet_wikitext103_subset_500_seeds012.yaml  high_jet_wikitext103_subset_smoke.yaml  kernel_lm.yaml  kernel_lm_smoke.yaml  lm_focused.yaml  phase2_kernel_lm_medium.yaml  phase2_kernel_lm_medium_seeds12.yaml  (+20 more)
data/: smoke_lm.txt
(+45 files in other folders)
