[project]
name = "complex-jordan-rope"
version = "0.1.0"
description = "Experiments for Complex Jordan-RoPE positional encoding."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "tqdm>=4.66",
]

[project.optional-dependencies]
lm = ["datasets>=2.18"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
