[project]
name = "complex-jordan-rope"
version = "0.1.0"
description = "Experiments for Complex Jordan-RoPE positional encoding."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "tqdm>=4.66",
]

[project.optional-dependencies]
lm = ["datasets>=2.18"]
audio = [
  "audioread>=3.0",
  "imageio-ffmpeg>=0.5",
  "librosa>=0.10",
  "mido>=1.3",
  "mutagen>=1.47",
  "pretty_midi>=0.2.10",
  "scipy>=1.11",
  "soundfile>=0.12",
]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["jordan_rope*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
